
	* apps/examples/nxlines:  Added a test for NX line drawing capabilities.

6.9 2011-09-11 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/nxlines:  Extend the line drawing text to include drawing
	  of circles.
	* apps/system/i2c:  Add an I2C test tool that should help to bring up I2C
	  devices (when it is fully functional).
	* apps/nshlib/nsh_timcmds.c:  Add the date command that can be used to
	  show or set the time (only if CONFIG_RTC is set).

6.10 2011-10-06 Gregory Nutt <gnutt@nuttx.org>

	* apps/system/i2c:  Add repitition and address auto-incrementing so that
	  and command can be executed numerous times.  Add a new verify command
	  that will write to a register, read from register, and verify that
	  returned value.
	* apps/graphics/tiff:  Add a library that can be used to create TIFF files.
	* apps/examples/tiff:  Add a unit test for the TIFF file creation logic
	* apps/examples/lcdrw:  Add a test to verify if you can or can or read
	  data from an LCD correctly.
	* apps/examples/usbterm:  A USB terminal example.. more of a USB chat or
	  serial bridge:  Data received on local console echoed via USB serial; 
	  data received on USB serial is echoed on the local console.
	* apps/examples/touchscreen:  Add a simple, generic test for any
	  touschscreen driver.
	* Makefile:  The apps/ Makefile now checks for an apps/external directory
	  or symbolic link.  If such a directory/link exists (and has a Makefile),
	  it will be added to the apps/ build.  This allows external directories
	  to be included into the apps/ build by simply creating a symbolic link.

6.11 2011-11-12 Gregory Nutt <gnutt@nuttx.org>

	(No major changes from 6.10)

6.12 2011-12-06 Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/buttons:  The button test can now be executed as an NSH
	  built in command.

6.13 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

* apps/netutils/dhcpd/dhcpd.c: Fix several problems using host order address
  where network addresses expected (and vice versa).